--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,9 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf
+
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
@@ -31,13 +34,15 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-set -g @catppuccin_flavour 'mocha'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'catppuccin-tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @catppuccin_flavour 'mocha'
+# set -g @catppuccin_flavour 'latte'
 
 run '~/.tmux/plugins/tpm/tpm'
 
